# Backend

./: .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20250601_160650_init_migrations.rs  m20250614_041623_transfer_table_migrations.rs  m20250614_090509_add_referral_code_migrations.rs  m20250702_100052_add_merchant_table_migrations.rs  m20250705_112951_remove_username_migrations.rs
src/: config.rs  constants.rs  error.rs  main.rs
src/ctx/: mod.rs  mw_require_auth.rs  mw_resolve_ctx.rs  mw_resolve_google_ctx.rs
src/db/: mod.rs
src/db/entity/: merchant.rs  mod.rs  payment.rs  prelude.rs  referral_code.rs  sea_orm_active_enums.rs  transfer.rs  user.rs
src/macros/: dto_from_multipart.rs  mod.rs
src/routes/: app.rs  auth.rs  mod.rs  payment.rs  user.rs
src/services/: app.rs  error.rs  mod.rs
src/services/auth/: auth_handler.rs  mod.rs
src/services/auth/dto/: authorization_dto.rs  login_dto.rs  mod.rs  register_dto.rs  wallet_dto.rs
src/services/indexer/: mod.rs
src/services/payment/: mod.rs  payment_handler.rs
src/services/payment/dto/: create_payment_dto.rs  create_transfer_dto.rs  mod.rs  payment_dto.rs  submit_transfer_dto.rs
src/services/s3/: mod.rs
src/services/user/: mod.rs  user_handler.rs
src/services/user/dto/: create_merchant_profile_dto.rs  merchant_dto.rs  mod.rs  user_dto.rs
src/services/web3/: mod.rs
