[package]
name = "zuno-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version="=0.8.1", features=["macros", "multipart"] }
tokio = { version="1", features=["full"] }
serde = { version="1.0.219", features=["derive"] }
serde_json = "^1"
tower-http = { version="^0.6.2", features=["fs"] }
tower-cookies = "^0.11"
sea-orm = { version = "1.1.12", features = ["sqlx-postgres", "macros", "runtime-tokio-rustls", "with-chrono"] }
dotenvy = "0.15"
strum_macros="^0.27.1"
strum = "^0.27.1"
helius="0.2.5"
jsonwebtoken="9.3.1"
chrono="0.4.41"
argon2="0.5.3"
base64 = "0.22.1"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.21.3"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.91.0"
infer = "0.19.0"
convert_case = "0.8.0"
uuid = { version = "1.17.0", features = ["v4"]}
spl-token = "8.0.0"
solana-transaction = "2.2.1"
solana-message = "2.2.1"
solana-client = "2.2.1"
solana-keypair = "2.2.1"
solana-signer = "2.2.1"
solana-signature = "2.2.1"
solana-instruction = "2.1.1"
solana-transaction-status-client-types = "2.1.1" 
spl-associated-token-account = "7.0.0"
bincode = "1.3.3"
sea-orm-cli = "1.1.12"
reqwest = { version = "0.12.20", features = ["json"] }
sha2 = "0.10.9"
rand = "0.9.1"
aes-gcm = "0.10.3"

[dev-dependencies]
anyhow="^1"

[workspace]
members = [
    "migration"
]