[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
strum_macros="^0.27.1"
strum = "^0.27.1"

[dependencies.sea-orm-migration]
version = "1.1.12"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
